Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -339,9 +339,9 @@
    "source": [
     "# Your code here!\n",
     "class NewDriver:\n",
-    "    passe\n",
+    "    passenger = []\n",
     "    def passenger_names():\n",
-    "        pass"
+    "        fo"
    ]
   },
   {
