Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -341,7 +341,7 @@
     "class NewDriver:\n",
     "    passenger = []\n",
     "    def passenger_names():\n",
-    "        fo"
+    "        for "
    ]
   },
   {
