Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -340,8 +340,8 @@
     "# Your code here!\n",
     "class NewDriver:\n",
     "    passenger = []\n",
-    "    def passenger_names():\n",
-    "        for "
+    "    def passenger_names(self):\n",
+    "        for passenger in pas"
    ]
   },
   {
