Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -339,9 +339,10 @@
    "source": [
     "# Your code here!\n",
     "class NewDriver:\n",
-    "    passenger = []\n",
+    "    passengers = []\n",
     "    def passenger_names(self):\n",
-    "        for passenger in pas"
+    "        for passenger in passengers:\n",
+    "            "
    ]
   },
   {
