Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -341,8 +341,8 @@
     "class NewDriver:\n",
     "    passengers = []\n",
     "    def passenger_names(self):\n",
-    "        for passenger in passengers:\n",
-    "            passengers.append()"
+    "        for passenger in self.passengers:\n",
+    "            passengers.append(pass)"
    ]
   },
   {
