Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -342,7 +342,7 @@
     "    passengers = []\n",
     "    def passenger_names(self):\n",
     "        for passenger in self.passengers:\n",
-    "            passengers.append(pass)"
+    "            passengers.append(passenger.)"
    ]
   },
   {
