Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -333,16 +333,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (<ipython-input-1-23c24bea4110>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-23c24bea4110>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    return passengers\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here!\n",
     "class NewDriver:\n",
     "    passengers = []\n",
     "    def passenger_names(self):\n",
     "        for passenger in self.passengers:\n",
-    "            passengers.append(passenger.)"
+    "            passengers.append(passenger.name)\n",
+    "    return passengers"
    ]
   },
   {
