--- a/index.ipynb
+++ b/index.ipynb
@@ -370,7 +370,7 @@
    "outputs": [],
    "source": [
     "best_driver = NewDriver() # instantiate a NewDriver instance object\n",
-    "# add the name attribute and assign it 'Garol'\n",
+    "best_driver# add the name attribute and assign it 'Garol'\n",
     "# add the car_make attribute and assign it 'toyota'\n",
     "# add the car_model attribute and assign it 'camry'\n",
     "# add the age attribute and assign it '30'\n",
