--- a/index.ipynb
+++ b/index.ipynb
@@ -373,8 +373,8 @@
     "best_driver.name = 'Garol' #add the name attribute and assign it 'Garol'\n",
     "best_driver.car_make = 'toyota'# add the car_make attribute and assign it 'toyota'\n",
     "best_driver.car_model = 'camry'# add the car_model attribute and assign it 'camry'\n",
-    "best_driver.age# add the age attribute and assign it '30'\n",
-    "# add the passengers attribute and assign it to the list_of_passengers"
+    "best_driver.age = '30'# add the age attribute and assign it '30'\n",
+    "best.drive# add the passengers attribute and assign it to the list_of_passengers"
    ]
   },
   {
