Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -374,7 +374,7 @@
     "best_driver.car_make = 'toyota'# add the car_make attribute and assign it 'toyota'\n",
     "best_driver.car_model = 'camry'# add the car_model attribute and assign it 'camry'\n",
     "best_driver.age = '30'# add the age attribute and assign it '30'\n",
-    "best.drive# add the passengers attribute and assign it to the list_of_passengers"
+    "best.driver.# add the passengers attribute and assign it to the list_of_passengers"
    ]
   },
   {
