Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -365,16 +365,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'list_of_passengers' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-2e981a015bc6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mbest_driver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcar_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'camry'\u001b[0m\u001b[0;31m# add the car_model attribute and assign it 'camry'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mbest_driver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'30'\u001b[0m\u001b[0;31m# add the age attribute and assign it '30'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mbest_driver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpassengers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist_of_passengers\u001b[0m\u001b[0;31m# add the passengers attribute and assign it to the list_of_passengers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'list_of_passengers' is not defined"
+     ]
+    }
+   ],
    "source": [
     "best_driver = NewDriver() # instantiate a NewDriver instance object\n",
     "best_driver.name = 'Garol' #add the name attribute and assign it 'Garol'\n",
     "best_driver.car_make = 'toyota'# add the car_make attribute and assign it 'toyota'\n",
     "best_driver.car_model = 'camry'# add the car_model attribute and assign it 'camry'\n",
     "best_driver.age = '30'# add the age attribute and assign it '30'\n",
-    "best_driver.passengers = list_of_passenger# add the passengers attribute and assign it to the list_of_passengers"
+    "best_driver.passengers = list_of_passengers# add the passengers attribute and assign it to the list_of_passengers"
    ]
   },
   {
